kubernetes/jenkins/ingress-jenkins.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: jenkins.44ba79cd9fc94dbd9d6c.canadacentral.aksapp.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
        path: /
